# lilith-whatsapp

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 001_initial_schema.py  002_messages_search_tsv_trigger.py  003_messages_push_name_phone_number.py
src/core/: __init__.py  config.py  consistency.py  database.py  embed_backfill.py  embeddings.py  models.py
src/mcp_server/: __init__.py  __main__.py  hybrid_search.py  server.py
tests/: conftest.py  test_mcp_server.py  test_resolve_contact.py
wa-connector/: .env.example  README.md  package-lock.json  package.json  tsconfig.json
wa-connector/src/: baileys-helpers.ts  db.ts  listen.ts  qrcode-terminal.d.ts  sync-history.ts
