[project]
name = "lilith-whatsapp"
version = "0.1.0"
description = "WhatsApp context for Lilith agent (Baileys v7 sync + PostgreSQL + MCP search)"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "alembic>=1.18.3",
    "httpx>=0.28.0",
    "mcp[cli]>=1.0.0",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.46",
]

[project.scripts]
lilith-whatsapp = "main:main"
mcp = "mcp_server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/core", "src/mcp_server"]
