[project]
name = "lilith-whatsapp"
version = "0.1.0"
description = "WhatsApp context for Lilith agent (Baileys v7 sync + PostgreSQL + MCP search)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.18.3",
    "httpx>=0.28.0",
    "mcp[cli]>=1.0.0",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.2",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.46",
    "uvicorn>=0.34.0",
    "lilith-core",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "python-dotenv>=1.0.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "integration: tests that require real DATABASE_URL and existing data (deselect with -m 'not integration')",
]

[tool.ruff]
target-version = "py312"
line-length = 88
exclude = ["migrations", ".venv", "venv", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "TCH", "PTH", "N", "W"]
ignore = ["E501", "B905", "E402"]

[tool.ruff.format]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true
exclude = "migrations/"

[tool.uv.sources]
lilith-core = { path = "../lilith-core", editable = true }

[project.scripts]
lilith-whatsapp = "main:main"
mcp = "mcp_server.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/core", "src/mcp_server"]
